# llmfuzz

./: .env.example  .gitignore  README.md  dump.rdb  pyproject.toml
.github/workflows/: ci.yml
benchmarks/targets/: json_evaluator.py  real_parsers.py  stdlib_targets.py
src/llmfuzz/: cli.py
src/llmfuzz/agent/: loop.py  memory.py  prompts.py  strategy.py
src/llmfuzz/analysis/: benchmark.py  source.py
src/llmfuzz/coverage/: analyzer.py  collector.py  visualizer.py
src/llmfuzz/distributed/: coordinator.py  streams.py  worker.py
src/llmfuzz/execution/: harness_template.py  runner.py  sandbox.py
src/llmfuzz/models/: coverage.py  execution.py  input.py  session.py  target.py  task.py
src/llmfuzz/random_fuzzer/: baseline.py
src/llmfuzz/storage/: db.py  repository.py  schemas.sql
tests/: conftest.py  test_coverage_collector.py  test_models.py  test_sandbox.py  test_source_analysis.py
tests/fixtures/sample_targets/: buggy_module.py  simple_math.py  string_parser.py
