[project]
name = "llmfuzz"
version = "0.1.0"
description = "LLM-driven fuzzing agent with coverage-guided input generation"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.42.0",
    "coverage[toml]>=7.6",
    "pydantic>=2.10",
    "pydantic-settings>=2.7",
    "typer>=0.15",
    "aiosqlite>=0.20",
    "redis[hiredis]>=5.2",
    "matplotlib>=3.10",
    "rich>=13.9",
    "python-dotenv>=1.0",
]

[project.scripts]
llmfuzz = "llmfuzz.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/llmfuzz"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
]
